[tool.poetry]
name = "misc-tools"
version = "0.1.0"
description = ""
authors = ["Asif Momin <asifmomin@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
pydub = "^0.25.1"
speechrecognition = "^3.10.1"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
